[package]
name = "exchange"
version = "0.1.0"
authors = ["Duco Lindhout <duco.lindhout@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-web-actors="3" 
actix-cors = "0.5.4"
actix = "0.10.0"
serde = "1.0.130"
actix-codec = "0.3"
serde_json = "1.0.69"
actix-files = "0.3"
awc = "2"
env_logger = "0.8"
futures = "0.3.1"
bytes = "0.5.3"